src/sass/components/_header.scss
.homeHeader {
  margin-bottom: 25rem;
  display: grid;
  gap: 13rem;

  @media (width <= 1280px) {
    gap: 4rem;
  }

  @media (width <= 640px) {
    margin-bottom: 18rem;
    gap: 12rem;
  }

  @media (width <= 400px) {
    margin-bottom: 15rem;
    gap: 10.4rem;
  }

  &__heroContent {
    display: flex;
    justify-content: center;
    gap: 40rem;
    position: relative;

    @media (width <= 1280px) {
      gap: 27.4rem;
    }

    @media (width <= 884px) {
      gap: 17.5rem;
    }

    @media (width <= 640px) {
      gap: 1rem;
    }

    & h1 {
      font-family: "Playfair Display", sans-serif;
      font-size: 6.4rem;
      font-style: italic;
      font-weight: 500;

      @media (width <= 1280px) {
        font-size: 5rem;
      }

      @media (width <= 640px) {
        font-size: 3.2rem;
        line-height: 2.5rem;
      }
    }

    & img {
      position: absolute;
      top: -20%;

      @media (width <= 1280px) {
        top: -51%;
        width: 35%;
      }

      @media (width <= 768px) {
        top: -10%;
        width: 40%;
      }

      @media (width <= 640px) {
        top: 83%;
        width: 69%;
      }

      @media (width <= 400px) {
        top: 84%;
        width: 65%;
      }
    }
  }

  &__openToWork {
    display: flex;
    justify-content: flex-end;

    @media (width <= 640px) {
      position: relative;
      bottom: -5rem;
    }

    & div {
      background-color: var(--openToWork-bg);
      border-radius: 2rem;
      padding: 0.5rem 1rem;
      display: flex;
      align-items: center;
      gap: 0.6rem;
      transition: all 0.2s ease-in;

      @media (width <= 640px) {
        & a {
          font-size: 0.7rem;
        }
      }

      &:hover {
        background-color: var(--openToWork-hovered);
      }

      @media (width <= 1280px) {
        padding: 0.5rem 0.9rem 0.5rem 0.7rem;
      }

      @media (width <= 400px) {
        padding: 0.3rem 0.8rem 0.3rem 0.5rem;
      }

      & p {
        font-size: smaller;
      }
    }

    &--dot {
      width: 1rem;
      height: 1rem;
      background-color: var(--accent-medium);
      border-radius: 50%;
      display: flex;
      align-items: center;
      justify-content: center;

      @media (width <= 640px) {
        width: 0.8em;
        height: 0.8rem;
      }

      &--inner {
        width: 0.5rem;
        height: 0.5rem;
        border-radius: 50%;
        background-color: var(--text-primary);

        @media (width <= 640px) {
          width: 0.4rem;
          height: 0.4rem;
        }
      }
    }
  }

  &__intro {
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    font-family: "Anton", sans-serif;

    @media (width <= 640px) {
      gap: 4.8rem;
    }

    & h2,
    h3 {
      font-weight: 500;
      text-transform: uppercase;
    }

    & h2 {
      font-size: 6rem;
      line-height: 7rem;

      @media (width <= 1280px) {
        font-size: 5rem;
        line-height: 5rem;
      }

      @media (width <= 640px) {
        font-size: 4rem;
        line-height: 4rem;
      }

      @media (width <= 400px) {
        font-size: 3.5rem;
        line-height: 3.5rem;
      }
    }

    & h3 {
      text-align: end;
      font-size: 2.9rem;
      line-height: 3.5rem;
      color: var(--text-secondary);
      padding-bottom: 0.6rem;
      letter-spacing: 0.05rem;

      @media (width <= 1280px) {
        font-size: 1.9rem;
        line-height: 2.2rem;
        padding-bottom: 0.1rem;
      }

      @media (width <= 640px) {
        font-size: 1.4rem;
        line-height: 1.6rem;
      }
    }
  }
}

.default-header {
  display: grid;
  gap: 1.2rem;

  &__title {
    font-size: 3.5rem;
    font-weight: bold;
    text-transform: uppercase;

    @media (width <= 640px) {
      font-size: 2.4rem;
    }

    @media (width <= 400px) {
      font-size: 2.2rem;
    }
  }

  &--about {
    display: grid;
    gap: 1rem;

    & span {
      color: var(--text-primary);
      font-weight: 600;
    }
  }
}

